--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -216,5 +216,15 @@
     </div>
   </div>
 
+  <script>
+    window.onload = function () {
+      const user = localStorage.getItem("efruit:user");
+
+      if (!user) {
+        window.location.href = "index.html";
+      }
+    }
+  </script>
+
 </body>
 </html>
