--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/joi@17.3.0/dist/joi-browser.min.js" integrity="sha256-4h9W2LI1WeiDryoIVAT+8vVTsYPI2Pah4vMCEkRFmtY=" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -29,32 +30,73 @@
           </div>
           <div class="row">
             <div class="col-12 centralize-container">
-                <form>
+                <form onsubmit="signup(event)">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Nome Completo</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email@example.com">
+                    <label for="name">Nome Completo*</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      aria-describedby="nameHelp"
+                      placeholder="Fulana de Tal"
+                      autocapitalize="word"
+                      minlength="2"
+                      maxlength="50"
+                      required
+                    >
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">E-Mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <label for="email">Email*</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      placeholder="email@example.com"
+                      autocomplete="username"
+                      required
+                    >
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">Telefone</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <label for="phone">Telefone*</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="phone"
+                      placeholder="(00) 00000-0000"
+                      pattern="\(\d{2}\) \d{5}-\d{4}"
+                      title="Digite o telefone no formato (00) 00000-0000"
+                      required
+                    >
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <label for="password">Senha*</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="password"
+                      placeholder="Senha"
+                      autocomplete="new-password"
+                      minlength="8"
+                      maxlength="30"
+                      required
+                    >
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">Confirmar senha</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <label for="password-confirmation">Confirmar senha*</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="password-confirmation"
+                      placeholder="Confirmar senha"
+                      autocomplete="new-password"
+                      required
+                    >
                   </div>
 
+                  <div class="col-12 centralize-container mt-5">
+                    <button class="btn orange-button" href="#">CADASTRAR</button>
+                  </div>
                 </form>
-            </div>
-            <div class="col-12 centralize-container mt-5">
-                <a class="orange-button" href="#">CADASTRAR</a>
             </div>
             </div>
           </div>
@@ -63,5 +105,87 @@
       </div>
     </div>
 
+    <script>
+      window.onload = () => {
+        const user = localStorage.getItem("efruit:user");
+
+        if (user) {
+          window.location.href = "products-page.html";
+        }
+      };
+
+      function signup(event) {
+        event.preventDefault();
+
+        const nameInput = document.getElementById("name");
+        const emailInput = document.getElementById("email");
+        const phoneInput = document.getElementById("phone");
+        const passwordInput = document.getElementById("password");
+        const passwordConfirmationInput = document.getElementById("password-confirmation");
+
+        const name = nameInput.value;
+        const email = emailInput.value;
+        const phone = phoneInput.value;
+        const password = passwordInput.value;
+        const passwordConfirmation = passwordConfirmationInput.value;
+
+        const schema = joi.object({
+          name: joi.string().min(2).max(50).required(),
+          email: joi.string().email({ tlds: { allow: false } }).required(),
+          phone: joi.string().required(),
+          password: joi.string().pattern(new RegExp("^[a-zA-Z0-9]{8,30}$")),
+          passwordConfirmation: joi.ref("password")
+        });
+
+        const validationResult = schema.validate({
+          name,
+          email,
+          phone,
+          password,
+          passwordConfirmation
+        }, {
+          abortEarly: false
+        });
+
+        if (!validationResult.error) {
+          const users = JSON.parse(localStorage.getItem("efruit:users")) || [];
+
+          const user = users.find(user => user.email === email);
+
+          if (user) {
+            alert("Usuário já existente");
+            emailInput.focus();
+            return;
+          }
+
+          users.push({
+            name,
+            email,
+            phone,
+            password
+          });
+
+          localStorage.setItem("efruit:users", JSON.stringify(users));
+          localStorage.setItem("efruit:user", JSON.stringify({
+            email,
+            name
+          }));
+
+          window.location.href = "products-page.html";
+        } else {
+          validationResult.error.details.forEach(error => {
+            switch (error.context.key) {
+              case "passwordConfirmation":
+                alert("Senhas não correspondem");
+                passwordConfirmationInput.focus();
+                break;
+            
+              default:
+                break;
+            }
+          });
+        }
+      }
+    </script>
   </body>
 </html>
