--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -2,6 +2,7 @@
 <html lang="br">
 <head>
   <!-- Bootstrap -->
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -11,6 +12,61 @@
   <title>E-Fruit</title>
 </head>
 <body>
+
+  <div class='modal-background' id='modal-background'>
+  </div>
+  <div class='modal-container' id='modal'>
+    <div class='product-container'>
+      <strong>Página do Produto</strong>
+      <div class='product-info'>
+        <img class='product-image' src='img\apple.png' alt='Apple' />
+        <strong> Maça Fuji </strong>
+        <div class="item-prop-container">
+          <div class='align-item-prop'>
+            <span>
+              Preço por kilo:
+            </span>
+            <span>
+              R$ 16,47
+            </span>
+          </div>
+          <div class='align-item-prop'>
+            <span>
+              Peso estimado:
+            </span>
+            <span>
+              300g
+            </span>
+          </div>
+        </div>
+        <div class='quantity-selector'>
+          <div style='font-weight: bolder; cursor: pointer;'>
+            -
+          </div>
+          <div>
+            300g
+          </div>
+          <div style='font-weight: bolder; cursor: pointer;'>
+            +
+          </div>
+        </div>
+      </div>
+      <div class='item-prop-container'>
+        <div class='align-item-prop'>
+          <strong>
+            Subtotal:
+          </strong>
+          <strong>
+            R$ 16,47
+          </strong>
+        </div>
+      </div>
+      <div class='to-cart-button'>
+        ADICIONAR
+      </div>
+    </div>
+  </div>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -81,7 +137,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
 
@@ -92,7 +148,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
             <div class="card d-flex align-items-center" style="width: 18rem;">
@@ -102,7 +158,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
           </div>
@@ -116,7 +172,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
 
@@ -127,7 +183,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
             <div class="card d-flex align-items-center" style="width: 18rem;">
@@ -137,7 +193,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
           </div>
@@ -151,7 +207,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
 
@@ -162,7 +218,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
             <div class="card d-flex align-items-center" style="width: 18rem;">
@@ -172,7 +228,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
           </div>
@@ -186,7 +242,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
 
@@ -197,7 +253,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
             <div class="card d-flex align-items-center" style="width: 18rem;">
@@ -207,7 +263,7 @@
                 <p class="card-text price mt-4"><strong>R$ 1,98/Kg</strong><br>Compra a cada 500g</p>
               </div>
               <div class="card-body">
-                <strong><a href="#" class="card-link">ADICIONAR AO CARRINHO</a></strong>
+                <strong><p onclick="openProductInfoModal()" class="card-link">ADICIONAR AO CARRINHO</p></strong>
               </div>
             </div>
           </div>
@@ -224,6 +280,34 @@
         window.location.href = "index.html";
       }
     }
+
+    const modalBackground = document.getElementById('modal-background');
+    modalBackground.onclick = (e) => {
+      e.preventDefault();
+
+      const body = document.getElementsByTagName('body')[0];
+      body.classList.remove('stop-scrolling');
+
+      const modalBackground = document.getElementById('modal-background');
+      const modal = document.getElementById('modal');
+
+      modalBackground.style.visibility = 'hidden';
+      modal.style.visibility = 'hidden';
+    };
+
+    const openProductInfoModal = () => {
+
+      const modalBackground = document.getElementById('modal-background');
+      const modal = document.getElementById('modal');
+
+      modalBackground.style.visibility = 'visible';
+      modal.style.visibility = 'visible';
+
+      document.documentElement.scrollTop = 0;
+
+      const body = document.getElementsByTagName('body')[0];
+      body.classList.add('stop-scrolling');
+    };
   </script>
 
 </body>
