Admin page done

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -17,11 +17,54 @@
         <div class="top-bar-nav">
             <h1 class="small-logo">e-fruit</h1>
             <ul class="top-bar-links">
-                <li><a href="#"><i class="fa fa-search"></i></a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
+                <li><a href="#" class="small-icon">Login</a></li>
+                <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
             </ul>
         </div>
+    </div>
+    <div class="admin-main-box">
+        <h2>Clientes</h2>
+        <input class="admin-search" type="text" name="cliente" placeholder="Cliente" />
+        <ul>
+          <!--Temporário antes de integrar com backend-->
+          <li class="admin-list-item">
+            <a href="#">Cliente 1</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+          <li class="admin-list-item">
+            <a href="#">Cliente 2</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+          <li class="admin-list-item">
+            <a href="#">Cliente 3</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+        </ul>
+        <h2>Produtos</h2>
+        <input class="admin-search" type="text" name="produto" placeholder="Produto" />
+        <ul class="admin-list">
+          <!--Temporário antes de integrar com backend-->
+          <li class="admin-list-item">
+            <a href="#">Produto 1</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+          <li class="admin-list-item">
+            <a href="#">Produto 2</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+          <li class="admin-list-item">
+            <a href="#">Produto 3</a>
+            <a href="#" class="small-icon"><i class="fa fa-eye"></i></a>
+            <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
+          </li>
+        </ul>
+        <button class=" btn orange-button">ADICIONAR PRODUTO</button>
     </div>
 </body>
 </html>
