--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -73,9 +73,9 @@
       <div class="top-bar-nav">
           <h1 class="small-logo">e-fruit</h1>
           <ul class="top-bar-links">
-              <li><a href="#"><i class="fa fa-search"></i></a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+              <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
+              <li><a href="#" class="small-icon">Login</a></li>
+              <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
           </ul>
       </div>
   </div>
