Changing units from px to rem

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -18,7 +18,7 @@
           <h1 class="small-logo">e-fruit</h1>
           <ul class="top-bar-links">
               <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
-              <li><span onclick='logout()' style='cursor: pointer;' class="small-icon">Logout</span></li>
+              <li><span id="logout-button" onclick='logout()' class="small-icon">Logout</span></li>
               <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
           </ul>
       </div>
