--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -86,16 +86,19 @@
   </div>
 
   <div class="top-bar">
-      <spam class="only-web">Frete grátis nas compras acima de R$99 | Entrega segura | Até 6x sem juros</spam>
-      <div class="top-bar-nav">
-          <h1 class="small-logo center-mobile">e-fruit</h1>
-          <ul class="only-web top-bar-links">
-              <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
-              <li><span id="logout-button" onclick='logout()' class="small-icon">Logout</span></li>
-              <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
-          </ul>
-      </div>
+    <spam class="only-web">Frete grátis nas compras acima de R$99 | Entrega segura | Até 6x sem juros</spam>
+    <div class="top-bar-nav">
+      <div></div>
+      <h1 class="small-logo center-mobile">e-fruit</h1>
+      <ul class="only-web top-bar-links">
+        <li><a href="admin.html" class="small-icon"><i class="fa fa-user"></i></a></li>
+        <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
+        <li><span onclick='logout()' style='cursor: pointer;' class="small-icon">Logout</span></li>
+        <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
+      </ul>
+    </div>
   </div>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
