--- a/frontend/products-page.html
+++ b/frontend/products-page.html
@@ -132,7 +132,7 @@
               </div>
               <div class="row">
                 <div class="col-12 d-flex justify-content-center align-items-center">
-                  <button type="submit" class="save-button">SALVAR CARTÃO</button>
+                  <button type="submit" class="save-button">SALVAR ENDEREÇO</button>
                 </div>
               </div>
             </form>
