--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+  <script src='api.js'></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
   <title>E-Fruit</title>
@@ -89,16 +89,14 @@
     window.location.href = 'signup.html';
   };
 
-  function login(event) {
+  async function login(event) {
     event.preventDefault();
 
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
 
-    const users = JSON.parse(localStorage.getItem("efruit:users")) || [];
-    const user = users.find(user => user.email === email);
-
-    if (user && user.password === password) {
+    const response = await apiPOST('/login', {'email': email, 'password': password});
+    if (response.status) {
       localStorage.setItem("efruit:user", JSON.stringify({
         email
       }));
