--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/joi@17.3.0/dist/joi-browser.min.js" integrity="sha256-4h9W2LI1WeiDryoIVAT+8vVTsYPI2Pah4vMCEkRFmtY=" crossorigin="anonymous"></script>
-
+    <script src='api.js'></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>E-Fruit</title>
@@ -116,7 +116,7 @@
         }
       };
 
-      function signup(event) {
+      async function signup(event) {
         event.preventDefault();
 
         const nameInput = document.getElementById("name");
@@ -150,24 +150,21 @@
         });
 
         if (!validationResult.error) {
-          const users = JSON.parse(localStorage.getItem("efruit:users")) || [];
 
-          const user = users.find(user => user.email === email);
+          const response = await apiPOST('/signup', {
+            'name': name,
+            'email': email,
+            'phone': phone,
+            'password': password,
+            'password_confirmation': passwordConfirmation
+          });
 
-          if (user) {
+          if (!response.status) {
             alert("Usuário já existente");
             emailInput.focus();
             return;
           }
 
-          users.push({
-            name,
-            email,
-            phone,
-            password
-          });
-
-          localStorage.setItem("efruit:users", JSON.stringify(users));
           localStorage.setItem("efruit:user", JSON.stringify({
             email,
             name
