adding contrast button

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -72,6 +72,7 @@
         <li><a href="#" class="small-icon"><i class="fa fa-search"></i></a></li>
         <li><span onclick='logout()' style='cursor: pointer;' class="small-icon">Logout</span></li>
         <li><a href="#" class="small-icon"><i class="fa fa-shopping-cart"></i></a></li>
+        <li id="adjust-contrast"><a href="#" class="small-icon"><i class="fa fa-adjust"></i></a></li>
       </ul>
     </div>
   </div>
@@ -121,6 +122,31 @@
     <button class="btn orange-button">ADICIONAR PRODUTO</button>
   </div>
   <script type="text/javascript">
+    function handleContrast(changeValue) {
+      let isHighContrast = JSON.parse(localStorage.getItem("efruit:isHighContrast")) || false;
+
+      if (changeValue) {
+        isHighContrast = !isHighContrast;
+        localStorage.setItem("efruit:isHighContrast", isHighContrast);
+      }
+
+      if (isHighContrast) {
+        document.documentElement.style.setProperty("--primary", "#FFF");
+        document.documentElement.style.setProperty("--secundary", "#F5F5F5");
+        document.documentElement.style.setProperty("--white", "#000");
+        document.documentElement.style.setProperty("--grey", "#8E8E8E");
+      } else {
+        document.documentElement.style.setProperty("--primary", "#FF7B01");
+        document.documentElement.style.setProperty("--secundary", "#F5F5F5");
+        document.documentElement.style.setProperty("--white", "#FFF");
+        document.documentElement.style.setProperty("--grey", "#8E8E8E");
+      }
+    }
+
+    window.onload = function () {
+      handleContrast(false);
+    }
+
     const logout = () => {
       delete localStorage['efruit:user'];
       delete localStorage['cart'];
@@ -159,6 +185,10 @@
       body.classList.add('stop-scrolling');
     };
 
+    const adjustContrastButton = document.getElementById("adjust-contrast");
+    adjustContrastButton.onclick = () => {
+      handleContrast(true);
+    }
   </script>
 </body>
 </html>
