--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src='api.js'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -16,10 +17,10 @@
   <!--Modal Cliente-->
   <div class='modal-background' id='modal-background'></div>
   <div class='modal-container' id='modal-client'>
-    <div class='product-container'>
-      <div class='product-info'>
-        <img class='product-image' src='img\avatar.png' alt='Apple' />
-        <strong id=product-name> Cliente 1 </strong>
+    <div class='client-container'>
+      <div class='client-info'>
+        <img class='client-image' src='img\avatar.png' alt='Apple' />
+        <strong id=client-name> Cliente 1 </strong>
         <div class="item-prop-container">
           <div class='align-item-prop'>
             <span>Nome Completo</span>
@@ -44,21 +45,21 @@
     <div class='product-container'>
       <div class='product-info'>
         <img class='product-image' src='img\apple.png' alt='Apple' />
-        <strong id=product-name> Maça Fuji </strong>
+        <strong id=product-name></strong>
         <div class="item-prop-container">
           <div class='align-item-prop'>
             <span>Preço por kilo:</span>
-            <input type="number" value="16.47" />
+            <input id="product-value" type="number" />
             <span>R$</span>
           </div>
           <div class='align-item-prop'>
             <span>Peso estimado por item:</span>
-            <input type="number" value="300" />
+            <input disabled type="number" value="300" />
             <span>g</span>
           </div>
         </div>
       </div>
-      <button class="btn orange-button">ATUALIZAR PRODUTO</button>
+      <button id="save-product-button" class="btn orange-button">ATUALIZAR PRODUTO</button>
     </div>
   </div>
 
@@ -101,23 +102,7 @@
     </ul>
     <h2>Produtos</h2>
     <input class="admin-search" type="text" name="produto" placeholder="Produto" />
-    <ul class="admin-list">
-      <!--Temporário antes de integrar com backend-->
-      <li class="admin-list-item">
-        <a href="#">Produto 1</a>
-        <a href="#" onClick="openModal('product')" class="small-icon"><i class="fa fa-eye"></i></a>
-        <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
-      </li>
-      <li class="admin-list-item">
-        <a href="#">Produto 2</a>
-        <a href="#" onClick="openModal('product')" class="small-icon"><i class="fa fa-eye"></i></a>
-        <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
-      </li>
-      <li class="admin-list-item">
-        <a href="#">Produto 3</a>
-        <a href="#" onClick="openModal('product')" class="small-icon"><i class="fa fa-eye"></i></a>
-        <a href="#" class="small-icon"><i class="fa fa-trash"></i></a>
-      </li>
+    <ul id="products" class="admin-list">
     </ul>
     <button class="btn orange-button">ADICIONAR PRODUTO</button>
   </div>
@@ -145,6 +130,8 @@
 
     window.onload = function () {
       handleContrast(false);
+
+      loadProducts();
     }
 
     const logout = () => {
@@ -169,7 +156,7 @@
       modalClient.style.visibility = 'hidden';
     };
 
-    const openModal = (type) => {
+    const openModal = (type, productId, product) => {
 
       const modalBackground = document.getElementById('modal-background');
       const modal = type === 'product' ?
@@ -183,11 +170,54 @@
 
       const body = document.getElementsByTagName('body')[0];
       body.classList.add('stop-scrolling');
+
+      document.getElementById("product-name").innerHTML = product.name;
+      document.getElementById("product-value").value = product.price;
+
+      document.getElementById("save-product-button").onclick = () => {
+        product.name = document.getElementById("product-name").innerHTML;
+        product.price = parseInt(document.getElementById("product-value").value);
+
+        apiUPDATE(`/product/${productId}`, 'update', product);
+      };
     };
 
     const adjustContrastButton = document.getElementById("adjust-contrast");
     adjustContrastButton.onclick = () => {
       handleContrast(true);
+    }
+
+    const loadProducts = async () => {
+      const response = await apiGET('/product');
+
+      if (response.status) {
+        const products = document.getElementById('products');
+        for (let productId in response.products) {
+          let li = document.createElement("li");
+          li.classList.add("admin-list-item");
+
+          let a = document.createElement("a");
+          a.innerHTML = response.products[productId].name;
+          li.appendChild(a);
+
+          a = document.createElement("a");
+          a.classList.add("small-icon");
+          let i = document.createElement("i");
+          i.classList.add("fa", "fa-eye");
+          a.appendChild(i);
+          a.onclick = () => openModal('product', productId, response.products[productId]);
+          li.appendChild(a);
+
+          a = document.createElement("a");
+          a.classList.add("small-icon");
+          i = document.createElement("i");
+          i.classList.add("fa", "fa-trash");
+          a.appendChild(i);
+          li.appendChild(a);
+
+          products.appendChild(li);
+        }
+      }
     }
   </script>
 </body>
