--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -178,7 +178,7 @@
         product.name = document.getElementById("product-name").innerHTML;
         product.price = parseInt(document.getElementById("product-value").value);
 
-        apiUPDATE(`/product/${productId}`, 'update', product);
+        apiUPDATE(`/product/${productId}`, product);
       };
     };
 
